Parese for font families before checking font names Bug 166919 r=dcone sr=bz